--- a/speedtest.css
+++ b/speedtest.css
@@ -3,6 +3,23 @@
 	src: url(VeraMono.ttf);
 }
 
+td, tr {
+	border: 1px solid black;
+	padding: 8px;
+}
+
+table {
+	border-collapse: collapse;
+	width: 300px;
+}
+
+div#textInstruction {
+	width: 608px;
+	padding: 0px 10px 0px 10px;
+	border: 1px solid black;
+	margin-bottom: 5px;
+}
+
 div#keyboardLayout {
 	cursor: default;
 	margin-bottom: 0px;
@@ -77,4 +94,8 @@ textarea#textInput {
 	width: 628px;
 	height: 170px;
 	resize: none;
+}
+
+textarea#logRead {
+	margin-top: 100px;
 }
